fixed header alignment for desktop view

--- a/less/header.less
+++ b/less/header.less
@@ -17,5 +17,8 @@ header {
 .header-container {
   .flexy(flex, column, null, center, center);
   transform: translateY(25px);
+  @media @desktop {
+    transform: translateY(0px);
+  }
 }
 //
